# substrate-archive

./: Cargo.toml
substrate-archive/: Cargo.toml  sqlx-data.json
substrate-archive-backend/: Cargo.toml
substrate-archive-backend/src/: frontend.rs  read_only_backend.rs
substrate-archive-backend/src/read_only_backend/: blockchain_backend.rs
substrate-archive/src/: actors.rs  archive.rs  database.rs  types.rs
substrate-archive/src/actors/: workers.rs
substrate-archive/src/actors/workers/: database.rs  storage_decoder.rs
substrate-archive/src/database/: models.rs  queries.rs
substrate-archive/src/migrations/: 20220328185951_decoded_storage.sql
test-common/test-wasm/: Cargo.toml
