[package]
name = "substrate-archive"
version = "0.6.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
# external
async-trait = "0.1"
arc-swap = "1.4.0"
chrono = "0.4.19"
dirs = { version = "3", package = "directories" }
fdlimit = "0.2"
fern = { version = "0.6", features = ["colored"] }
flume = "0.10.8"
futures = "0.3"
hashbrown = { version = "0.11", features = ["inline-more"] }
hex = "0.4"
itertools = "0.10"
itoa = "0.4.7"
log = { version = "0.4", features = ["serde"] }
num_cpus = "1.13"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
async-std = "1.9"
futures-timer = "3"
sqlx = { version = "0.5", default-features = false, features = [
    "postgres",
    "macros",
    "runtime-async-std-rustls",
    "migrate",
    "json",
    "offline",
    "chrono",
] }
tempfile = "3.2.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
xtra = { version = "0.5", features = ["with-async_std-1"] }
async-stream = "0.3"
semver = "1.0"

# Parity
desub = { package = "desub", git = "https://github.com/nathanwhit/desub", branch = "update-deps", features = [
    "polkadot-js",
] }
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = [
    "derive",
    "full",
] }
sc-chain-spec = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sc-client-api = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sc-executor = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-api = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-blockchain = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-block-builder = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-core = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-runtime = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-tracing = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-storage = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-wasm-interface = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }

# Workspace
substrate-archive-backend = { path = '../substrate-archive-backend' }
sa-work-queue = { path = "../work-queue/sa-work-queue" }
