[package]
name = "test-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
build = "build.rs"
publish = false

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }

[dependencies]
sp-core = { default-features = false, git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-io = { default-features = false, git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
sp-runtime = { default-features = false, git = "https://github.com/nathanwhit/substrate", branch = "creditcoin" }
tracing = { version = "0.1.29", default-features = false }

[features]
default = ["std"]
std = ["sp-core/std", "sp-io/std", "sp-runtime/std"]
